k8s/censor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: censor
spec:
  selector:
    app: censor
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc
